--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   http: 0.12.1
   provider: ^4.1.1
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
