--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/icons/
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -61,12 +62,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-    - family: Schyler
+  fonts:
+    - family: Poppins
       fonts:
-        - asset: fonts/Schyler-Regular.ttf
-        - asset: fonts/Schyler-Italic.ttf
-          style: italic
+        - asset: assets\fonts\Poppins\Poppins-Regular.ttf
+        - asset: assets\fonts\Poppins\Poppins-Medium.ttf
+          weight: 600
+        - asset: assets\fonts\Poppins\Poppins-Bold.ttf
+          weight: 700
+          
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
